//$Id$

ver 0.5
-No more garbage when the grab window is taken outside the screen
-Added a convenient drop down menu to select the zoom factor
-A new refresh button to start/stop window refresh when needed
-Added "tooltips" and "What's this" at lots of places
-Tons of code cleanup

ver 0.4
-No more flickering!

ver 0.3
-Fixed a slow-refresh bug.. making KMag 100% usable!
-Made resizing grab window much more easier (esp. for laptops!)
-GUI improvements.. got rid of sliders.. introduced zoom icons
-Centered display of magnified contents
-Now using Kdevelop 1.4b2..
-Added documentation

ver 0.2
-First public release for the KDE2 port and rewrite
-Feature enhancements : Easy  moving and resizing of grab-window

ver 0.1
-First public release for KDE1